fixed header z-index

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -18,6 +18,8 @@ html {
     border-bottom: 1px solid seashell;
     width: 100%;
     position: fixed;
+    z-index: 10;
+    background-color: black;
 }
 
 #header-flex {
